--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/aplikasisurat.jpg" class="card-img-top" alt="Project 1" />
+              <img src="img/projects/arsipdesa.jpg" class="card-img-top" alt="Project 1" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
@@ -105,7 +105,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/appkgb.jpg" class="card-img-top" alt="Project 2" />
+              <img src="img/projects/rekam_medik.jpg" class="card-img-top" alt="Project 2" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
@@ -113,7 +113,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/appspp.jpg" class="card-img-top" alt="Project 3" />
+              <img src="img/projects/suratkejaksaan.jpg" class="card-img-top" alt="Project 3" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
@@ -121,7 +121,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/sistempengelolaansurat.jpg" class="card-img-top" alt="Project 4" />
+              <img src="img/projects/appkgb.jpg" class="card-img-top" alt="Project 4" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
@@ -129,7 +129,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/rekam_medik.jpg" class="card-img-top" alt="Project 5" />
+              <img src="img/projects/sipesut.jpg" class="card-img-top" alt="Project 5" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
