--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
+    <link href='img/title.png' rel='shorcut icon'>
 
     <title>My Portfolio | Muhammad Abid Thoula</title>
   </head>
