--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
     <section class="jumbotron text-center">
       <img src="img/thoula.jpg" alt="Sandhika Galih" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Muhammad Abid Thoula</h1>
-      <p class="lead">Web Programming</p>
+      <p class="lead">Web Programming | Desain Web | Mobile Programming</p>
+      <p class="lead">Silahkan download CV saya Klik 
+        <a href="CV_Muhammad_Abid.pdf" target="_blank" onclick="window.print();">disini</a>
+      </p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
@@ -69,12 +72,22 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-4">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure mollitia voluptatum corrupti sint delectus facilis pariatur recusandae! Eveniet, iure debitis?</p>
+          <div class="col-md-10">
+            <p>
+              Saya seorang freshgraduate pengembang perangkat lunak dengan pengalaman dalam merancang aplikasi,
+              membuat kode, dan menguji sistem aplikasi. Saya sangat termotivasi untuk terus mengembangkan kemampuan saya dan tumbuh secara
+              profesional. Saya yakin dengan kemampuan saya dapat menghasilkan ide menarik untuk memecahkan permasalahan yang ada.
+            </p>
+            <p>
+              Saya mampu dalam bahasa pemrograman HTML, CSS, Bootsrap, Java, JavaScript, C, C++, PHP, React. Framework yang telah saya
+              gunakan yaitu CodeIgniter, Laravel, React.js, Node.js
+            </p>
           </div>
-          <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est quibusdam animi odit unde sequi voluptatibus quo rem perferendis eos, numquam in porro cumque a hic!</p>
-          </div>
+          <!-- <div class="col-md-4">
+            <p>
+              
+            </p>
+          </div> -->
         </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -92,7 +105,7 @@
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>My Projects</h2>
+            <h2>My Project</h2>
           </div>
         </div>
         <div class="row justify-content-center">
@@ -100,7 +113,11 @@
             <div class="card">
               <img src="img/projects/arsipdesa.jpg" class="card-img-top" alt="Project 1" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">
+                  <a href="http://arsipdesa.great-site.net" target="_blank" class="text-black">
+                    Aplikasi Persuratan Pada Desa
+                  </a>
+                </p>
               </div>
             </div>
           </div>
@@ -108,7 +125,9 @@
             <div class="card">
               <img src="img/projects/rekam_medik.jpg" class="card-img-top" alt="Project 2" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">
+                  Aplikasi Rekam Medik Pada Puskeswan
+                </p>
               </div>
             </div>
           </div>
@@ -116,7 +135,9 @@
             <div class="card">
               <img src="img/projects/suratkejaksaan.jpg" class="card-img-top" alt="Project 3" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">
+                  <a href="http://arsipsuratkejaksaan.epizy.com" target="_blank" class="text-black">Aplikasi Pengarsipan Surat </a>
+                </p>
               </div>
             </div>
           </div>
@@ -124,7 +145,11 @@
             <div class="card">
               <img src="img/projects/appkgb.jpg" class="card-img-top" alt="Project 4" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">
+                  <a href="http://appkgb.epizy.com" target="_blank" class="text-black">
+                    Sistem Aplikasi Kenaikan Gaji Berkala
+                  </a>
+                </p>
               </div>
             </div>
           </div>
@@ -132,7 +157,9 @@
             <div class="card">
               <img src="img/projects/sipesut.jpg" class="card-img-top" alt="Project 5" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">
+                  Sistem Informasi Pengelolaan Surat Masuk dan Keluar
+                </p>
               </div>
             </div>
           </div>
