--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <h1 class="display-4">Muhammad Abid Thoula</h1>
       <p class="lead">Web Programming | Desain Web | Mobile Programming</p>
       <p class="lead">Silahkan download CV saya Klik 
-        <a href="CV_Portfolio_Muh_Abid.pdf" target="_blank" onclick="window.print();">disini</a>
+        <a href="CV_Portfolio_Muh_Abid.pdf" target="_blank">disini</a>
       </p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
