--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/thoula.jpg" alt="Sandhika Galih" width="200" class="rounded-circle img-thumbnail" />
+      <img src="img/thoula.jpg" alt="Muhammad Abid Thoula" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Muhammad Abid Thoula</h1>
       <p class="lead">Web Programming | Desain Web | Mobile Programming</p>
       <p class="lead">Silahkan download CV saya Klik 
