--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section class="jumbotron text-center">
       <img src="img/thoula.jpg" alt="Muhammad Abid Thoula" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Muhammad Abid Thoula</h1>
-      <p class="lead">Web Programming | Desain Web | Mobile Programming</p>
+      <p class="lead">Web Programming | Desain Web | IT Support</p>
       <p class="lead">Silahkan download CV saya Klik 
         <a href="CV_Portfolio_Muh_Abid.pdf" target="_blank">disini</a>
       </p>
