--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-10">
             <p>
-              Saya seorang freshgraduate pengembang perangkat lunak dengan pengalaman dalam merancang aplikasi,
+              Saya seorang pengembang perangkat lunak dengan pengalaman dalam merancang aplikasi,
               membuat kode, dan menguji sistem aplikasi. Saya sangat termotivasi untuk terus mengembangkan kemampuan saya dan tumbuh secara
               profesional. Saya yakin dengan kemampuan saya dapat menghasilkan ide menarik untuk memecahkan permasalahan yang ada.
             </p>
@@ -159,6 +159,66 @@
               <div class="card-body">
                 <p class="card-text">
                   Sistem Informasi Pengelolaan Surat Masuk dan Keluar
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/projects/appkgb.jpg" class="card-img-top" alt="Project 4" />
+              <div class="card-body">
+                <p class="card-text">
+                  <a href="http://appkgb.epizy.com" target="_blank" class="text-black">
+                    Sistem Aplikasi Kenaikan Gaji Berkala
+                  </a>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/projects/appkgb.jpg" class="card-img-top" alt="Project 4" />
+              <div class="card-body">
+                <p class="card-text">
+                  <a href="http://appkgb.epizy.com" target="_blank" class="text-black">
+                    Sistem Aplikasi Kenaikan Gaji Berkala
+                  </a>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/projects/appkgb.jpg" class="card-img-top" alt="Project 4" />
+              <div class="card-body">
+                <p class="card-text">
+                  <a href="http://appkgb.epizy.com" target="_blank" class="text-black">
+                    Sistem Aplikasi Kenaikan Gaji Berkala
+                  </a>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/projects/appkgb.jpg" class="card-img-top" alt="Project 4" />
+              <div class="card-body">
+                <p class="card-text">
+                  <a href="http://appkgb.epizy.com" target="_blank" class="text-black">
+                    Sistem Aplikasi Kenaikan Gaji Berkala
+                  </a>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/projects/appkgb.jpg" class="card-img-top" alt="Project 4" />
+              <div class="card-body">
+                <p class="card-text">
+                  <a href="http://appkgb.epizy.com" target="_blank" class="text-black">
+                    Sistem Aplikasi Kenaikan Gaji Berkala
+                  </a>
                 </p>
               </div>
             </div>
