--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/appkgb.jpg" class="card-img-top" alt="Project 4" />
+              <img src="img/projects/posbindu.jpg" class="card-img-top" alt="Project 4" />
               <div class="card-body">
                 <p class="card-text">
                   <a href="http://appkgb.epizy.com" target="_blank" class="text-black">
-                    Sistem Aplikasi Kenaikan Gaji Berkala
+                    Sistem Pos Pembinaan Terpadu (POSBINDU) Fakultas Ilmu Kesehatan UMPP
                   </a>
                 </p>
               </div>
@@ -177,11 +177,11 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/appkgb.jpg" class="card-img-top" alt="Project 4" />
+              <img src="img/projects/sikes.jpg" class="card-img-top" alt="Project 4" />
               <div class="card-body">
                 <p class="card-text">
                   <a href="http://appkgb.epizy.com" target="_blank" class="text-black">
-                    Sistem Aplikasi Kenaikan Gaji Berkala
+                    Sistem Kelola Surat Tugas Fakultas Ilmu Kesehatan UMPP
                   </a>
                 </p>
               </div>
@@ -189,11 +189,11 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/appkgb.jpg" class="card-img-top" alt="Project 4" />
+              <img src="img/projects/siplabsen.jpg" class="card-img-top" alt="Project 4" />
               <div class="card-body">
                 <p class="card-text">
                   <a href="http://appkgb.epizy.com" target="_blank" class="text-black">
-                    Sistem Aplikasi Kenaikan Gaji Berkala
+                    Sistem Booking Ruang Praktek Fakultas Ilmu Kesehatan UMPP
                   </a>
                 </p>
               </div>
@@ -201,23 +201,11 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/appkgb.jpg" class="card-img-top" alt="Project 4" />
+              <img src="img/projects/fikes.jpg" class="card-img-top" alt="Project 4" />
               <div class="card-body">
                 <p class="card-text">
                   <a href="http://appkgb.epizy.com" target="_blank" class="text-black">
-                    Sistem Aplikasi Kenaikan Gaji Berkala
-                  </a>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="img/projects/appkgb.jpg" class="card-img-top" alt="Project 4" />
-              <div class="card-body">
-                <p class="card-text">
-                  <a href="http://appkgb.epizy.com" target="_blank" class="text-black">
-                    Sistem Aplikasi Kenaikan Gaji Berkala
+                    Company Profile Fakultas Ilmu Kesehatan UMPP
                   </a>
                 </p>
               </div>
