--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
               <img src="img/projects/posbindu.jpg" class="card-img-top" alt="Project 4" />
               <div class="card-body">
                 <p class="card-text">
-                  <a href="http://appkgb.epizy.com" target="_blank" class="text-black">
+                  <a href="https://posbindu.umpp.ac.id/" target="_blank" class="text-black">
                     Sistem Pos Pembinaan Terpadu (POSBINDU) Fakultas Ilmu Kesehatan UMPP
                   </a>
                 </p>
@@ -180,7 +180,7 @@
               <img src="img/projects/sikes.jpg" class="card-img-top" alt="Project 4" />
               <div class="card-body">
                 <p class="card-text">
-                  <a href="http://appkgb.epizy.com" target="_blank" class="text-black">
+                  <a href="https://sikes.umpp.ac.id/" target="_blank" class="text-black">
                     Sistem Kelola Surat Tugas Fakultas Ilmu Kesehatan UMPP
                   </a>
                 </p>
@@ -192,7 +192,7 @@
               <img src="img/projects/siplabsen.jpg" class="card-img-top" alt="Project 4" />
               <div class="card-body">
                 <p class="card-text">
-                  <a href="http://appkgb.epizy.com" target="_blank" class="text-black">
+                  <a href="https://siplabsen.umpp.ac.id/" target="_blank" class="text-black">
                     Sistem Booking Ruang Praktek Fakultas Ilmu Kesehatan UMPP
                   </a>
                 </p>
@@ -204,7 +204,7 @@
               <img src="img/projects/fikes.jpg" class="card-img-top" alt="Project 4" />
               <div class="card-body">
                 <p class="card-text">
-                  <a href="http://appkgb.epizy.com" target="_blank" class="text-black">
+                  <a href="https://fikes.umpp.ac.id/" target="_blank" class="text-black">
                     Company Profile Fakultas Ilmu Kesehatan UMPP
                   </a>
                 </p>
