--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </p>
             <p>
               Saya mampu dalam bahasa pemrograman HTML, CSS, Bootsrap, Java, JavaScript, C, C++, PHP, React. Framework yang telah saya
-              gunakan yaitu CodeIgniter, Laravel, React.js, Node.js
+              gunakan yaitu CodeIgniter, Laravel, React.js
             </p>
           </div>
           <!-- <div class="col-md-4">
